change reg hr function
